# Dobby

./: .clang-format  .gitignore  Android.mk  CMakeLists.txt  CMakeLists.txt.old  CodeStyleStandard.md  HookFrameworkDesign.md  Makefile  README.md  README_zh-cn.md  android.mk  auto-build.sh  build.sh  darwin.ios.mk  darwin.mac.mk  ent.xml  ios.arm.mk  ios.arm64.mk  ios.mk  usage_docs.md
HookCc/: HookCc.cc  HookCc.h
Plugins/FindSymbol/: CMakeLists.txt  hookzz_find_symbol.h  z_symbol.h
Plugins/FindSymbol/darwin/: find-symbol-darwin.c  find_symbol_darwin.c  find_symbol_dyld_shared_cache.c  symbol_internal.h
Plugins/FindSymbol/darwin/shared-cache/: dyld_cache_format.h
Plugins/MachOStaticHook/: CMakeLists.txt  main.cc
Plugins/MachOStaticPatcher/: CMakeLists.txt  README.md  hookzz_static.h  main.cc
Plugins/MachOStaticPatcher/MachOManipulator/: MachOManipulator.cc  MachOManipulator.h
Plugins/MachOStaticPatcher/OneKey/: auto.sh
Plugins/MachOStaticPatcher/RuntimeSupport/: CMakeLists.txt  FunctionInlineReplaceExport.cc  InterfaceInternal.h  Internal.h  StubRebase.cc  TrampolineStubRebase.cc
Plugins/MachOStaticPatcher/example/MachOStaitcPatcherExample/MachOStaitcPatcherExample/: AppDelegate.h  AppDelegate.m  MainLogic.c  MainLogic.h  ViewController.h  ViewController.m  main.m
Plugins/MachOStaticPatcher/example/MachOStaitcPatcherExample/MachOStaitcPatcherExample.xcodeproj/: project.pbxproj
Plugins/MachOStaticPatcher/example/MachOStaitcPatcherExample/MachOStaitcPatcherExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Plugins/MachOStaticPatcher/hookzz/RuntimeMode/: FunctionInlineReplaceExport.cc
Plugins/MachOStaticPatcher/hookzz/StaticMode/ExecMemory/: clear-cache-tool.cc  code-patch-tool-static.cc  code-patch-tool.cc
Plugins/MachOStaticPatcher/hookzz/StaticMode/InstructionRelocation/arm64/: ARM64InstructionRelocation.cc
Plugins/MachOStaticPatcher/hookzz/StaticMode/InterceptRoutingPlugin/FunctionInlineReplace/: FunctionInlineReplaceExport.cc  function-inline-replace.cc  function-inline-replace.h
Plugins/MachOStaticPatcher/hookzz/StaticMode/InterceptRoutingTrampoline/arm64/: trampoline-arm64.cc
Plugins/MachOStaticPatcher/hookzz/StaticMode/PlatformInterface/Common/: platform-static.cc  platform-windows.cc
Plugins/MachOStaticPatcher/hookzz_static/ExecMemory/: code-patch-tool-static.cc
Plugins/MachOStaticPatcher/hookzz_static/InstructionRelocation/arm64/: ARM64InstructionRelocation.cc
Plugins/MachOStaticPatcher/hookzz_static/PlatformInterface/Common/: platform-static.cc
Plugins/StaticDobby/: CMakeLists.txt
Plugins/StaticDobby/MachOManipulator/: MachOManipulator.cc  MachOManipulator.h
Plugins/StaticDobby/RuntimeSupport/: FunctionInlineReplaceExport.cc  InterfaceInternal.h  TrampolineStubRebase.cc
Plugins/StaticDobby/dobby_static_source/ExecMemory/: code-patch-tool-static.cc
Plugins/StaticDobby/dobby_static_source/InterceptRoutingTrampoline/arm64/: trampoline-arm64.cc
Plugins/StaticDobby/dobby_static_source/PlatformInterface/Common/: platform-static.cc
example/: CMakeLists.txt  CMakelists.txt  README.md  android_common_api.cc  darwin_common_api.cc  dynamic_loader_monitor.cc  file_operation_monitor.cc  file_operation_monitor.h  main.cc  memory_operation_instrument.cc  memory_operation_instrument.h  posix_file_descriptor_operation_monitor.cc  posix_socket_network_monitor.cc
examples/: CMakeLists.txt  CMakelists.txt  socket_example.cc
examples/Android/AArch64.ARMv8/: HookSimpleFunction
examples/HOST.X86_64.build/: README.md
examples/HookSimpleFunction/: HookSimpleFunction.cc
examples/YourHackL1b/: AssemblyDynamicBinaryInstrument.cpp  AssemblyDynamicBinaryInstrument.h  YourHackL1b.cpp  YourHackL1b.hpp
examples/iOS/AArch64.ARMv8/HookExample/HookExample/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  YourHackL1b.cpp  YourHackL1b.hpp  main.m
examples/iOS/AArch64.ARMv8/HookExample/HookExample.xcodeproj/: project.pbxproj
examples/iOS/AArch64.ARMv8/HookExample/HookExample.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/iOS/AArch64.ARMv8/HookExample/HookZzL1b/: hookzz.h
examples/iOS/AArch64.ARMv8/HookZz.xcodeproj/: project.pbxproj
examples/iOS/AArch64.ARMv8/HookZzExample/HookZzExample/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
examples/iOS/AArch64.ARMv8/HookZzExample/HookZzExample.xcodeproj/: project.pbxproj
srcxx/assembly_core/: CMakeLists.txt  code-buffer.h  cpu.h  globals.h  utils.h
srcxx/assembly_core/arch/arm/: constants-arm.h
srcxx/assembly_core/arch/arm64/: constants-arm64.h  instructions-arm64.h  registers-arm64.h
srcxx/assembly_core/docs/: saitama_assembly_core_level_0.md
srcxx/assembly_core/modules/assembler/: assembler-arm64.cc  assembler-arm64.h
srcxx/assembly_core/modules/codegen/: codegen-arm64.h
srcxx/assembly_core/test/: test-arm64.cc
tests/: CMakeLists.txt  CMakelists.txt  UniconEmulator.cpp  UniconEmulator.h  catch.hpp  test  test.c  test_arm64_relocator.c  test_hook  test_hook.c  test_hook.cpp  test_hook_MGCopyAnswer.m  test_hook_address.c  test_hook_objc_msgSend  test_hook_objc_msgSend.c  test_hook_oc.m  test_hook_printf.c  test_insn_relo_arm64.cpp  test_ios.m  test_native.cpp
tests/HookSimpleFunction/: HookSimpleFunction.cc
tests/InstructionRelocation/aarch64/: test_aarch64_instruction_relocation.cc
tests/InstructionRelocation/arm64/: test_aarch64_instruction_relocation.cc
tests/InstructionRelocation/x64/: test_x64_instruction_relocation.cc
tests/arm-android/: makefile  test_hook_address_thumb.c  test_hook_open_arm.c  test_hook_printf.c
tests/arm-insn-fix/: test_insn_fix.c
tests/arm-ios/: makefile  test_hook_address_thumb.c  test_hook_freeaddr.c  test_hook_oc.m  test_hook_oc_thumb.m  test_hook_open_arm.c  test_hook_printf.c
tests/arm64-insn-fix/: test_insn_fix.c
tests/arm64-ios/: makefile  test_hook_address.c  test_hook_oc.m  test_hook_printf.c
tests/c/: CMakelists.txt  hookzz_test.cpp  hookzz_test_exe.cpp
tests/capstone/: test  test.c  test_arm64  test_arm64.c
tests/insn-fix/: test_insn_fix.c
(+1313 files in other folders)
